@@ -24,7 +24,9 @@
      </entry></row>
      <row><entry namest="c1" nameend="c2">
 <synopsis>
-packet ::= (&xml-struct;*, &xml-allowstrict;?, &xml-allowtaut;?,
+packet ::= (&xml-struct;*,
+            &xml-spanstrict;?, &xml-allowstrict;?,
+            &xml-spantaut;?, &xml-allowtaut;?,
             &xml-tag;*, &xml-packet;*)</synopsis>
      </entry></row>
      <row><entry namest="c1" nameend="c2">
@@ -78,6 +80,8 @@ packet ::= (&xml-struct;*, &xml-allowstrict;?, &xml-allowtaut;?,
      <member>&xml-allowstrict;</member>
      <member>&xml-allowtaut;</member>
      <member>&xml-packet;</member>
+     <member>&xml-spanstrict;</member>
+     <member>&xml-spantaut;</member>
      <member>&xml-struct;</member>
      <member>&xml-tag;</member>
     </simplelist>.
